--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,7 @@
 <div class="container">
 	<h2 class="title">HELLO THERE!</h2>
 	<img ng-src="img/me.jpg" class="morph pic" id="me"></a>
-	<div ng-repeat='about in about'>
+	<div ng-repeat='about in about' class="about">
 		<h3 id="aboutTitle">{{about.Title}}</h3>
 		<p>{{about.Content}}</p>
 	</div>
