--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,18 @@
 <!-- Write an expression to see your $scope.number variable -->
-<div class="backgroundImg" style="background:no-repeat url('img/b5.png'); z-index: -1;"></div>
 <div>
-<!--   <p id="subtitle">Keep Srolling for a little about me...</p>
-  <i id = "icons" class="fa fa-angle-down fa-4x"></i> -->
-
-  <div class="circle"><br><br>❤ <br>HEY. GLAD YOU'RE HERE!</div>
+  <!-- <p class="h">HEY. GLAD YOU'RE HERE!</p> -->
+<!--   <section class="home">
+		<h1>Glad You're here!</h1>
+	</section> -->
+	<img src="../img/12.png" id="img-div"/>
+  <footer>
+  	<ul class="nav navbar-nav navbar-left" id="navbottom">
+  	  <li><a ui-sref="home" style = "color: grey" href="#">Home</a></li>
+  	  <li><a ui-sref="projects" style = "color: grey" href="#">Projects</a></li>
+  	  <li><a ui-sref="about" style = "color: grey" href="#">About</a></li>
+  	  <li><a ui-sref="contact" style = "color: grey" href="#">Contact</a></li>
+  	</ul>
+  </footer>
 
 </div>
 </div>
