--- a/css/app.css
+++ b/css/app.css
@@ -1,19 +1,38 @@
+body {
+    font-family: 'Roboto Condensed', sans-serif;
+    color: white;
+/*    background-image: url('../img/x.jpg');	
+    	*/
+	background-image: url('../img/z.jpg'); 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    background-repeat: no-repeat;
+	background-attachment: fixed;
+}
+#img-div {
+	margin-top: 100px;
+	max-width: 40%;
+	margin-left: 30%;
+	opacity: 0.8;
+}
 #navbar {
     width: 100%;
     max-width: 100%;
     position: fixed;
     z-index: 999;
-    background: transparent;
+    background: black;
   	border: 0;
-    padding-top: 100px;
-    padding-bottom: 100px;
+    padding-top: 50px;
+    padding-bottom: 0px;
     padding-left: 100px;
     padding-right: 70px;
     font-size: 18px;
 }
 
 #navbottom {
-	font-size: 20px;
+	font-size: 25px;
 	color: inherit;
 	text-decoration: none;
 }
@@ -23,22 +42,8 @@
 	text-align: right;
 	margin-left: 20px;
 	color: grey;
-	margin-right: 20px;
+	margin-right: 150px;
 }
-
-/*
-h1 {
-	color: #CEF0D4; 
-	font-family: 'Rouge Script', cursive; 
-	font-family: "proxima-nova";
-	font-weight: 400;
-	font-size: 80px; 
-	font-weight: bold; 
-	line-height: 48px; 
-	margin: 0 0 50px; 
-	text-align: center; 
-
-}*/
 
 #subtitle {
 	font-size: 16px; 
@@ -46,29 +51,6 @@ h1 {
 	line-height: 48px; 
 	margin-top: 0px;
 	text-align: center; 
-}
-
-.circle {
-	width:320px;
-	height:320px;
-	border-radius:50%;
-	font-size:40px;
-	color:#fff;
-	line-height:120px;
-	text-align:center;
-	background:#DB7093;
-	position: relative;
-    top: -550px;
-    right: -410px;
-	line-height: 100%;
-	opacity: 0.9;
-}
-
-body {
-    font-family: 'Roboto Condensed', sans-serif;
-    color: black;
-/*    background-color: #000;
-    color: white;*/
 }
 
 .backgroundImg{
@@ -92,7 +74,9 @@ footer {
 	bottom:10px;
 	width:100%;
 	left:0px;
-	text-align:center;
+	text-align: left;
+	margin-left: 100px;
+	background: transparent;
 	/*border-top:1px solid #e3e3e3;*/
 }
 
@@ -133,27 +117,19 @@ h1 {
     text-align: center;
 }
 
-@media screen and (min-width: 480px) {
-	#logo {
-	height: 50px;
-	width: 50px;
-	display: inline-block;
-	float: left;
-}
-
 /*project page css*/
 #pi {
-	height: 200px;
-    width: 200px;
+	height: 80px;
+    width: 80px;
     cursor: pointer;
     position: relative;
-    margin-left: 300px;
+    margin-left: 10px;
     float: left;
 }
 
 .ptext {
     text-align: left;
-    margin-left: 10%;
+    margin-left: 6%;
     vertical-align: middle;
 }
 
@@ -164,11 +140,12 @@ h1 {
 #pdetails {
 	display: inline-block;
 	padding-bottom: 120px;
-	margin-left: 80px;
+	margin-left: 10px;
+  	width: 200px;
 }
 
 #pnames {
-	margin-left: 400px;
+	margin-left: 10px;
 	margin-bottom: 20px;
 }
 
@@ -190,8 +167,8 @@ h1 {
 .pic {
   border: 2px solid #fff;  
   float: left;
-  height: 300px;
-  width: 300px;
+  height: 200px;
+  width: 200px;
   margin: 20px;
   overflow: hidden;
   margin-bottom: 100px;
@@ -219,9 +196,13 @@ h1 {
 
 /*social media animation*/
 #contact {
-	padding-bottom: 50px;
+	padding: 50px;
 	font-size: 20px;
 	text-align: center;
+}
+
+.about {
+	border-radius: 100px;
 }
 
 a,a:visited { color: #fff; }
@@ -229,7 +210,7 @@ a:hover { color: #fff; }
 
 .social {
 	float: right;
-	margin: 2em 4.5em; width: 100px; height: 100px; 	
+	margin: 2em 2em; width: 100px; height: 100px; 	
 	display: block; text-align: center; line-height:103px; color: #fff;
 	
 	position: relative;
@@ -269,6 +250,7 @@ a:hover { color: #fff; }
 .social.social-skype > .back { background: #12A5F4; }
 .social.social-linkedin > .back { background: #4875B4; }
 .social.social-envolope > .back { background: #ea4c89; }
+.social.social-instagram > .back {background: #4E433C;}
 
 /* Hover */
 .social:hover {
@@ -279,5 +261,83 @@ a:hover { color: #fff; }
 	margin-top: 60px;
 }
 
+@media screen and (min-width: 480px) {
+	#logo {
+		height: 50px;
+		width: 50px;
+		display: inline-block;
+		float: left;
+	}
+
+	#pi {
+		height: 120px;
+	    width: 120px;
+	    cursor: pointer;
+	    position: relative;
+	    margin-left: 30px;
+	    float: left;
+	}
+	#pdetails {
+		display: inline-block;
+		padding-bottom: 120px;
+		margin-left: 10px;
+	  	width: 200px;
+	}
+
+	#pnames {
+		margin-left: 30px;
+		margin-bottom: 20px;
+	}
+	.ptext {
+	    margin-left: 8%;
+	}
+	.social {
+		width: 100px; height: 100px;
+	}
+	.pic {
+		height: 250px;
+  		width: 250px;
+	}
+
+}
+
+@media screen and (min-width: 768px )  {
+	#logo {
+		height: 50px;
+		width: 50px;
+		display: inline-block;
+		float: left;
+	}
+	#pi {
+		height: 200px;
+	    width: 200px;
+	    cursor: pointer;
+	    position: relative;
+	    margin-left: 30px;
+	    float: left;
+	}
+	#pdetails {
+		display: inline-block;
+		padding-bottom: 120px;
+		margin-left: 30px;
+	  	width: 400px;
+	}
+
+	#pnames {
+		margin-left: 260px;
+		margin-bottom: 20px;
+	}
+	.ptext {
+	    margin-left: 8%;
+	}
+	.social {
+		width: 100px; height: 100px;
+	}
+	.pic {
+		height: 300px;
+  		width: 300px;
+	}
+
+}
 
 
