--- a/templates/contact.html
+++ b/templates/contact.html
@@ -21,6 +21,15 @@
 	     </div>
 	</a>
 
+	<a class="social social-instagram" href="https://www.instagram.com/fireangelll/" target="_blank">
+	     <div class="front">
+			<i class="fa fa-instagram"></i>
+	     </div>
+	     <div class="back">
+			<i class="fa fa-instagram"></i>
+	     </div>
+	</a>
+
 	<a class="social social-github" href="https://github.com/angelpyt" target="_blank">
 	     <div class="front">
 			<i class="fa fa-github"></i>
@@ -47,6 +56,7 @@
 			<i class="fa fa-envelope"></i>
 	     </div>
 	</a>
+
 <!-- 	<div id="icon">
 	  <a href="https://twitter.com/fireangelP" target="_blank"><i class="fa fa-twitter fa-3x"></i></a> 
 	  <a href="tel:206-660-7971"><i class="fa fa-phone fa-3x"></i></a>
