--- a/templates/home.html
+++ b/templates/home.html
@@ -4,7 +4,7 @@
 <!--   <section class="home">
 		<h1>Glad You're here!</h1>
 	</section> -->
-	<img src="../img/12.png" id="img-div"/>
+	<img src="img/12.png" id="img-div"/>
   <footer>
   	<ul class="nav navbar-nav navbar-left" id="navbottom">
   	  <li><a ui-sref="home" style = "color: grey" href="#">Home</a></li>
