--- a/templates/about.html
+++ b/templates/about.html
@@ -4,7 +4,7 @@
 	<img ng-src="img/me.jpg" class="morph pic" id="me"></a>
 	<div ng-repeat='about in about' class="about">
 		<h3 id="aboutTitle">{{about.Title}}</h3>
-		<p>{{about.Content}}</p>
+		<p id="aContent">{{about.Content}}</p>
 	</div>
 </div>
 
